--- a/Index.html
+++ b/Index.html
@@ -2,11 +2,11 @@
   <!DOCTYPE html>
   <html>
     <head>
-      <title>Page Title</title>
+      <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-      <H1><p style="text-align:center">ONG - AYUDA A UN PELUDO</p></H1>
+      <h1><p style="text-align:center">ONG - AYUDA A UN PELUDO</p></h1>
         <p style="text-align:center">Movidos por la moral, la empatía y el corazón, buscamos lograr transformaciones que cambien la vida de las personas que lo necesitan y crear una red de apoyo junto a las personas que quieran ser partícipe de un cambio social. </p>
 
           <p style="text-align:center">«Creemos en un mundo donde todos somos iguales»</p>
